# This file is part of `rust-i18n` project. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `rust-i18n` project's Git repository.

[workspace]
resolver = "2"
members = [
    "crates/icu",
    "crates/lstring",
    "crates/lexer",
    "crates/registry",
    "crates/provider/core",
    "crates/provider/sqlite3",
    "crates/pattern",
    "crates/message",
]

exclude = [
    # Currently no exclusions.
]
