# This file is part of `rust-i18n` project. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `rust-i18n` project's Git repository.

[workspace]
resolver = "2"
members = [
    "crates/i18n",
    "crates/lexer",
    "crates/localiser",
    "crates/provider/core",
    "crates/provider/sqlite3",
    "crates/utility",
    #"experimental/renderer"
]
exclude = [
    # Currently no exclusions.
]

[workspace.package]
authors = [ "Rizzen Yazston" ]
categories = [ "internationalization", "localization", "rust-patterns" ]
edition = "2021"
homepage = "https://github.com/rizzen-yazston/i18n"
include = [
    "src/**/*",
    "Cargo.toml",
    "BSD-3-Clause",
    "README.asciidoc",
]
keywords = [ "internationalization", "localization", "icu4x" ]
license = "BSD-3-Clause"
repository = "https://github.com/rizzen-yazston/i18n"
rust-version = "1.70.0"
version = "0.10.0" # Keep below crates in sync.

[workspace.dependencies]

# Project crates
# KEEP IN SYNC WITH workspace.members
i18n-rizzen-yazston = { version = "0.10.0", path = ".crates/i18n", default-features = false }
i18n_lexer-rizzen-yazston = { version = "0.10.0", path = "crates/lexer", default-features = false }
i18n_localiser-rizzen-yazston = { version = "0.10.0", path = "crates/localiser", default-features = false }
i18n_provider-rizzen-yazston = { version = "0.10.0", path = "crates/provider/core", default-features = false }
i18n_provider_sqlite3-rizzen-yazston = { version = "0.10.0", path = "crates/provider/sqlite3", default-features = false }
i18n_utility-rizzen-yazston = { version = "0.10.0", path = "crates/utility", default-features = false }
#i18n_renderer-rizzen-yazston = { version = "0.0.0", path = "experimental/renderer", default-features = false }

# ICU dependencies
icu_provider = { version = "1.5.0", default-features = false, features = [ "serde" ] }
icu_provider_fs = { version = "1.5.0", default-features = false }
icu_provider_blob = { version = "1.5.0", default-features = false }
icu_properties = { version = "1.5.0", default-features = false }
icu_segmenter = { version = "1.5.0", default-features = false, features = [ "serde" ] }
icu_locid = { version = "1.5.0", default-features = false }
icu_locid_transform = { version = "1.5.0", default-features = false }
icu_plurals = { version = "1.5.0", default-features = false }
icu_decimal = { version = "1.5.0", default-features = false }
icu_calendar = { version = "1.5.0", default-features = false }
icu_datetime = { version = "1.5.0", default-features = false }
fixed_decimal = { version = "0.5.6", default-features = false, features = [ "ryu" ] }
# Use when trying out the new features of ICU on the master branch
#icu_provider = { git = "https://github.com/unicode-org/icu4x", branch = "main", features = [ "serde" ], optional = true, default-features = false }
#icu_provider_fs = { git = "https://github.com/unicode-org/icu4x", branch = "main", optional = true, default-features = false }
#icu_provider_blob = { git = "https://github.com/unicode-org/icu4x", branch = "main", optional = true, default-features = false }
#icu_properties = { git = "https://github.com/unicode-org/icu4x", branch = "main", default-features = false }
#icu_segmenter = { git = "https://github.com/unicode-org/icu4x", branch = "main", default-features = false }
#icu_locid = { git = "https://github.com/unicode-org/icu4x", branch = "main", default-features = false }
#icu_plurals = { git = "https://github.com/unicode-org/icu4x", branch = "main", default-features = false }
#icu_decimal = { git = "https://github.com/unicode-org/icu4x", branch = "main", default-features = false }
#icu_calendar = { git = "https://github.com/unicode-org/icu4x", branch = "main", default-features = false }
#icu_datetime = { git = "https://github.com/unicode-org/icu4x", branch = "main", default-features = false }
#fixed_decimal = { git = "https://github.com/unicode-org/icu4x", branch = "main", features = [ "ryu" ], default-features = false }

# Other dependendies
log = { version = "0.4.22", default-features = false }
os_info = { version = "3.8.2", default-features = false }
rusqlite = { version = "0.32.1", default-features = false }
