# This file is part of `i18n-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `i18n-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "i18n-rizzen-yazston"
version = "0.6.1"
authors = ["Rizzen Yazston"]
edition = "2021"
rust-version = "1.70.0"
description = "The `i18n` crate of the Internationalisation project."
license = "BSD-3-Clause"
readme = "README.asciidoc"
repository = "https://github.com/rizzen-yazston/i18n"
keywords = ["internationalization", "localization", "icu4x"]
categories = ["internationalization", "localization", "rust-pattern"]

[features]

# Enable the use of the internal data provider option.
compiled_data = [
    "i18n_icu-rizzen-yazston/compiled_data",
] 

# Enable the use of memory storage at runtime.
blob = [
    "i18n_icu-rizzen-yazston/blob",
]

# Enable the use of file system storage at runtime.
fs = [
    "i18n_icu-rizzen-yazston/fs",
]

[dependencies]
i18n_icu-rizzen-yazston = { version = "0.6.1", path = "../icu" }
i18n_lexer-rizzen-yazston = { version = "0.6.1", path = "../lexer" }
i18n_message-rizzen-yazston = { version = "0.6.1", path = "../message" }
i18n_pattern-rizzen-yazston = { version = "0.6.1", path = "../pattern" }
i18n_provider-rizzen-yazston = { version = "0.6.1", path = "../provider/core" }
i18n_provider_sqlite3-rizzen-yazston = { version = "0.6.1", path = "../provider/sqlite3" }
i18n_utility-rizzen-yazston = { version = "0.6.1", path = "../utility" }

[lib]
name = "i18n"
