# This file is part of `i18n-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `i18n-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "i18n-rizzen-yazston"
description = "The `i18n` crate of the Internationalisation project."
license = "BSD-3-Clause"
readme = "README.asciidoc"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
compiled_data = [
    "i18n_icu-rizzen-yazston/compiled_data",
    "i18n_pattern-rizzen-yazston/compiled_data",
    "i18n_localiser-rizzen-yazston/compiled_data",
] 
blob = [
    "i18n_icu-rizzen-yazston/blob",
    "i18n_pattern-rizzen-yazston/blob",
    "i18n_localiser-rizzen-yazston/blob",
]
fs = [
    "i18n_icu-rizzen-yazston/fs",
    "i18n_pattern-rizzen-yazston/fs",
    "i18n_localiser-rizzen-yazston/fs",
]
sync = [
    "i18n_icu-rizzen-yazston/sync",
    "i18n_lexer-rizzen-yazston/sync",
    "i18n_utility-rizzen-yazston/sync",
    "i18n_provider-rizzen-yazston/sync",
    "i18n_provider_sqlite3-rizzen-yazston/sync",
    "i18n_pattern-rizzen-yazston/sync",
    "i18n_localiser-rizzen-yazston/sync",
]
log = [
    "i18n_icu-rizzen-yazston/log",
    "i18n_pattern-rizzen-yazston/log",
    "i18n_provider_sqlite3-rizzen-yazston/log",
    "i18n_localiser-rizzen-yazston/log",
]

[dependencies]
i18n_icu-rizzen-yazston = { workspace = true }
i18n_lexer-rizzen-yazston = { workspace = true }
i18n_localiser-rizzen-yazston = { workspace = true }
i18n_pattern-rizzen-yazston = { workspace = true }
i18n_provider-rizzen-yazston = { workspace = true }
i18n_provider_sqlite3-rizzen-yazston = { workspace = true }
i18n_utility-rizzen-yazston = { workspace = true }

[lib]
name = "i18n"
