# This file is part of `i18n_icu-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `i18n_icu-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "i18n_icu-rizzen-yazston"
version = "0.6.1"
authors = ["Rizzen Yazston"]
edition = "2021"
rust-version = "1.70.0"
description = "The `i18n_icu` crate of the Internationalisation project."
license = "BSD-3-Clause"
readme = "README.asciidoc"
repository = "https://github.com/rizzen-yazston/i18n"
keywords = ["internationalization", "localization", "icu4x"]
categories = ["internationalization", "localization", "rust-pattern"]

[dependencies]
icu_provider = "1.2.0"
icu_properties = "1.2.0"
icu_segmenter = "1.2.0"
icu_plurals = "1.2.0"
icu_decimal = "1.2.0"
icu_calendar = "1.2.0"
icu_datetime = "1.2.0"

[dependencies.fixed_decimal]
version = "0.5.3"
# Needed for floating point support.
features = [ "ryu" ]

[lib]
name = "i18n_icu"
