# This file is part of `i18n_icu-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `i18n_icu-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "i18n_icu-rizzen-yazston"
version = "0.6.1"
authors = [ "Rizzen Yazston" ]
edition = "2021"
rust-version = "1.70.0"
description = "The `i18n_icu` crate of the Internationalisation project."
license = "BSD-3-Clause"
readme = "README.asciidoc"
repository = "https://github.com/rizzen-yazston/i18n"
keywords = [ "internationalization", "localization", "icu4x" ]
categories = [ "internationalization", "localization", "rust-pattern" ]

[features]
compiled_data = [] 
blob = [
    "buffer",
    "dep:icu_provider_blob",
    "icu_provider?/deserialize_postcard_1",
]
fs = [
    "buffer",
    "dep:icu_provider_fs",
    "icu_provider?/deserialize_bincode_1",
]
buffer = [ "dep:icu_provider", "icu_segmenter/serde", "icu_properties/serde" ]
sync = [ "icu_provider?/sync" ]

[dependencies]

# Temporary using git repo as 1.3 is not yet available at crates.io
#icu_provider = { version = "1.3.0", features = [ "serde" ], optional = true }
#icu_provider_fs = { version = "1.3.0", optional = true }
#icu_provider_blob = { version = "1.3.0", optional = true }
#icu_properties = { version = "1.3.0" }
#icu_segmenter = { version = "1.3.0", features = [ "serde" ] }
icu_provider = { git = "https://github.com/unicode-org/icu4x", branch = "main", features = [ "serde" ], optional = true }
icu_provider_fs = { git = "https://github.com/unicode-org/icu4x", branch = "main", optional = true }
icu_provider_blob = { git = "https://github.com/unicode-org/icu4x", branch = "main", optional = true }
icu_properties = { git = "https://github.com/unicode-org/icu4x", branch = "main" }
icu_segmenter = { git = "https://github.com/unicode-org/icu4x", branch = "main" }

[lib]
name = "i18n_icu"
