# This file is part of `i18n_icu-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `i18n_icu-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "i18n_icu-rizzen-yazston"
description = "The `i18n_icu` crate of the Internationalisation project."
license = "BSD-3-Clause"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
compiled_data = [] 
blob = [
    "buffer",
    #"dep:icu_provider_blob",
    "icu_provider/deserialize_postcard_1",
]
fs = [
    "buffer",
    #"dep:icu_provider_fs",
    "icu_provider/deserialize_bincode_1",
]
buffer = [
    #"dep:icu_provider", 
    "icu_segmenter/serde", 
    "icu_properties/serde"
]
sync = [ "icu_provider/sync" ]
log = []#[ "dep:log" ]

[dependencies]
icu_provider = { workspace = true }
icu_provider_fs = { workspace = true }
icu_provider_blob = { workspace = true }
icu_properties = { workspace = true }
icu_segmenter = { workspace = true }
log = { workspace = true }

[lib]
name = "i18n_icu"
