# This file is part of `i18n_lexer-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `i18n_lexer-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "i18n_lexer-rizzen-yazston"
description = "The `i18n_lexer` crate of the Internationalisation project."
license = "BSD-3-Clause"
readme = "README.asciidoc"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
icu_blob = [ "i18n_icu-rizzen-yazston/icu_blob", ]
icu_compiled_data = [ "i18n_icu-rizzen-yazston/icu_compiled_data", ] 
icu_fs = [ "i18n_icu-rizzen-yazston/icu_fs", ]
log = [ "i18n_icu-rizzen-yazston/logging", ]
sync = [ "i18n_icu-rizzen-yazston/sync" ]

[dependencies]
i18n_icu-rizzen-yazston = { workspace = true }

[dev-dependencies]
i18n_icu-rizzen-yazston = { workspace = true, features = [ "icu_compiled_data" ] }

[lib]
name = "i18n_lexer"
