# This file is part of `i18n_lexer-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `i18n_lexer-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "i18n_lexer-rizzen-yazston"
description = "The `i18n_lexer` crate of the Internationalisation project."
license = "BSD-3-Clause"
readme = "README.asciidoc"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = [ "icu_compiled_data" ]
buffer = [
    "icu_segmenter/serde", 
    "icu_properties/serde"
]
icu_blob = [
    "buffer",
    "icu_provider/deserialize_postcard_1",
]
icu_compiled_data = [
    "icu_properties/compiled_data",
    "icu_segmenter/compiled_data",
] 
icu_extended = [ "i18n_utility-rizzen-yazston/icu_extended" ]
icu_fs = [
    "buffer",
    "icu_provider/deserialize_bincode_1",
]
logging = []
sync = [
    "icu_provider/sync",
    "i18n_utility-rizzen-yazston/sync",
]

[dependencies]
i18n_utility-rizzen-yazston = { workspace = true }
icu_provider = { workspace = true }
icu_provider_fs = { workspace = true }
icu_provider_blob = { workspace = true }
icu_properties = { workspace = true }
icu_segmenter = { workspace = true }
log = { workspace = true }

[lib]
name = "i18n_lexer"
