# This file is part of `i18n_lexer-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `i18n_lexer-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "i18n_pattern-rizzen-yazston"
version = "0.3.0"
authors = ["Rizzen Yazston"]
edition = "2021"
rust-version = "1.65.0"
description = "The `i18n-pattern` crate of the Internationalisation project."
license = "BSD-3-Clause"
readme = "README.asciidoc"
# false prevents publishing while developing, else string of repository identfier
publish = false

# these keys are used when preparing to publish to 'crates.io'
#documentation = "<url, default is docs.rs>"
#homepage = "<url"
# once public GitHub repository is used
#repository = "<github url>"
#'crates.io' has max 5 keywords, of max 20 characters [A-Za-z0-9_-] 
#keywords = ["",...]
#'crates.io' has max 5 categories, selected from `crates.io` list
#categories = ["internationalization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i18n_lexer-rizzen-yazston = { version = "0.3.0", path = "../lexer" } # Needed for Token, TokenType
tree-rizzen-yazston = { version = "0.2.0", path = "../../../tree" }

[dev-dependencies]

[dev-dependencies.icu_testdata]
version = "1.0.0"
# Needed for BufferProvider and icu_segmenter used in i18n_lexer.
features = [ "buffer", "icu_segmenter" ]

[dev-dependencies.icu_provider]
version = "1.0.0"
# Needed for BufferProvider used in i18n_lexer.
features = [ "serde", "deserialize_bincode_1" ]

[lib]
name = "i18n_pattern"
