# This file is part of `i18n_pattern-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `i18n_pattern-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "i18n_pattern-rizzen-yazston"
version = "0.6.1"
authors = ["Rizzen Yazston"]
edition = "2021"
rust-version = "1.70.0"
description = "The `i18n_pattern` crate of the Internationalisation project."
license = "BSD-3-Clause"
readme = "README.asciidoc"
repository = "https://github.com/rizzen-yazston/i18n"
keywords = ["internationalization", "localization", "icu4x"]
categories = ["internationalization", "localization", "rust-pattern"]

[features]

# Enable the use of the internal data provider option.
compiled_data = [
    "i18n_icu-rizzen-yazston/compiled_data",
] 

# Enable the use of memory storage at runtime.
blob = [
    "buffer",
    "i18n_icu-rizzen-yazston/blob",
]

# Enable the use of file system storage at runtime.
fs = [
    "buffer",
    "i18n_icu-rizzen-yazston/fs",
]

buffer = [
    "icu_provider/serde",
    "icu_decimal/serde",
    "icu_datetime/serde",
    "icu_plurals/serde"
]

[dependencies]
i18n_icu-rizzen-yazston = { version = "0.6.1", path = "../icu" }
i18n_utility-rizzen-yazston = { version = "0.6.1", path = "../utility" }
i18n_lexer-rizzen-yazston = { version = "0.6.1", path = "../lexer" } # Needed for Token, TokenType
tree-rizzen-yazston = "0.4.0"
#icu_provider = { version = "1.3.0" }
#icu_locid = "1.3.0"
#icu_plurals = "1.3.0"
#icu_decimal = "1.3.0"
#icu_calendar = "1.3.0"
#icu_datetime = "1.3.0"
#fixed_decimal = { version = "0.5.3", features = [ "ryu" ] }
icu_provider = { git = "https://github.com/unicode-org/icu4x", branch = "main" }
icu_locid = { git = "https://github.com/unicode-org/icu4x", branch = "main" }
icu_plurals = { git = "https://github.com/unicode-org/icu4x", branch = "main" }
icu_decimal = { git = "https://github.com/unicode-org/icu4x", branch = "main" }
icu_calendar = { git = "https://github.com/unicode-org/icu4x", branch = "main" }
icu_datetime = { git = "https://github.com/unicode-org/icu4x", branch = "main" }
fixed_decimal = { git = "https://github.com/unicode-org/icu4x", branch = "main", features = [ "ryu" ] }

[dev-dependencies]
i18n_icu-rizzen-yazston = { version = "0.6.1", path = "../icu", features = [ "compiled_data" ] }
os_info = "3"

[lib]
name = "i18n_pattern"
