# This file is part of `i18n_utility-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `i18n_utility-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "i18n_utility-rizzen-yazston"
version = "0.6.1"
authors = ["Rizzen Yazston"]
edition = "2021"
rust-version = "1.70.0"
description = "The `i18n_utility` crate of the Internationalisation project."
license = "BSD-3-Clause"
readme = "README.asciidoc"
repository = "https://github.com/rizzen-yazston/i18n"
keywords = ["internationalization", "localization", "icu4x"]
categories = ["internationalization", "localization", "rust-pattern"]

[dependencies]
#icu_locid = "1.3.0"
icu_locid = { git = "https://github.com/unicode-org/icu4x", branch = "main" }

[lib]
name = "i18n_utility"
