# This file is part of `i18n_utility-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `i18n_utility-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "i18n_utility-rizzen-yazston"
description = "The `i18n_utility` crate of the Internationalisation project."
license = "BSD-3-Clause"
readme = "README.asciidoc"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
sync = []
icu_extended = []

[dependencies]
icu_locid = { workspace = true }
icu_locid_transform = { workspace = true }
icu_calendar = { workspace = true }
fixed_decimal = { workspace = true }

[lib]
name = "i18n_utility"
