# This file is part of `i18n_provider_sqlite3-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `i18n_provider_sqlite3-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "i18n_provider_sqlite3-rizzen-yazston"
version = "0.6.1"
authors = ["Rizzen Yazston"]
edition = "2021"
rust-version = "1.70.0"
description = "The `i18n_provider_sqlite3` crate of the Internationalisation project."
license = "BSD-3-Clause"
readme = "README.asciidoc"
repository = "https://github.com/rizzen-yazston/i18n"
keywords = ["internationalization", "localization", "icu4x"]
categories = ["internationalization", "localization", "rust-pattern"]

[features]
sync = [ "i18n_utility-rizzen-yazston/sync", "i18n_provider-rizzen-yazston/sync" ]

[dependencies]
i18n_utility-rizzen-yazston = { version = "0.6.1", path = "../../utility" }
i18n_provider-rizzen-yazston = { version = "0.6.1", path = "../core" }
icu_locid = "1.2.0"
rusqlite = "0.29.0"

[dev-dependencies]

[lib]
name = "i18n_provider_sqlite3"
