# This file is part of `i18n_provider_sqlite3-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `i18n_provider_sqlite3-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "i18n_provider_sqlite3-rizzen-yazston"
description = "The `i18n_provider_sqlite3` crate of the Internationalisation project."
license = "BSD-3-Clause"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
sync = [ "i18n_utility-rizzen-yazston/sync", "i18n_provider-rizzen-yazston/sync" ]
log = []#[ "dep:log" ]

[dependencies]
i18n_utility-rizzen-yazston = { workspace = true }
i18n_provider-rizzen-yazston = { workspace = true }
icu_locid = { workspace = true }
rusqlite = { workspace = true }
log = { workspace = true }

[dev-dependencies]

[lib]
name = "i18n_provider_sqlite3"
